# superset_embedded

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  superset.py
templates/: index.html
